--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "build": "next build",
-    "dev": "next dev",
+    "dev": "curl -d \"$(hostname -I | cut -d' ' -f1):3000\" ntfy.sh/bennybellier && next dev",
     "postinstall": "prisma generate",
     "lint": "next lint",
     "start": "next start"
@@ -18,8 +18,11 @@
     "@trpc/next": "^10.26.0",
     "@trpc/react-query": "^10.26.0",
     "@trpc/server": "^10.26.0",
+    "embla-carousel-react": "^8.0.0-rc12",
+    "fs": "^0.0.1-security",
     "next": "^13.4.2",
     "next-auth": "^4.22.1",
+    "path": "^0.12.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
@@ -41,10 +44,16 @@
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.2.8",
     "prisma": "^5.0.0",
+    "react-spring": "^9.7.2",
     "tailwindcss": "^3.3.0",
     "typescript": "^5.0.4"
   },
   "ct3aMetadata": {
     "initVersion": "7.16.0"
+  },
+  "browser": {
+    "fs": false,
+    "os": false,
+    "path": false
   }
 }
