--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@trpc/server": "^10.26.0",
     "embla-carousel-react": "^8.0.0-rc12",
     "fs": "^0.0.1-security",
+    "image-size": "^1.0.2",
     "next": "^13.4.2",
     "next-auth": "^4.22.1",
     "path": "^0.12.7",
