--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "curl -d \"$(hostname -I | cut -d' ' -f1):3000\" ntfy.sh/bennybellier && next dev",
     "postinstall": "prisma generate",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest"
   },
   "dependencies": {
     "@formkit/auto-animate": "^0.8.0",
@@ -29,10 +30,14 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "superjson": "1.12.2",
+    "typedoc": "^0.25.1",
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.1.3",
+    "@testing-library/react": "^14.0.0",
     "@types/eslint": "^8.37.0",
+    "@types/jest": "^29.5.4",
     "@types/node": "^18.16.0",
     "@types/prettier": "^2.7.2",
     "@types/react": "^18.2.6",
@@ -42,6 +47,10 @@
     "autoprefixer": "^10.4.14",
     "eslint": "^8.40.0",
     "eslint-config-next": "^13.4.2",
+    "framer-motion": "^10.16.4",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "next-router-mock": "^0.9.9",
     "postcss": "^8.4.21",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.2.8",
