Modify:  puts Head in layout Delete: photos.json Adding: structure of 1 album is folder with pictures and album.json description file Adding: automations of generation of album page with folders Modify: portfolio/photos contains album list Modify: lib/photos for system of albums Adding: comment in lib/photos for file structure Modify: reduce size of css on portfolio/videos display Delete: tRPC api route for photos in server/api/routers/content Adding: interface used in lib/photos in utils/types.ts Update gitignore: remove all folder and files under public/img/portfolio/

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,10 @@ yarn-error.log*
 
 # typescript
 *.tsbuildinfo
+
+# content
+/public/img/portfolio/**
+/public/img/team/*
+/public/img/references/*
+/public/img/*.png
+/public/img/*.svg
