--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "path": "^0.12.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-error-boundary": "^4.0.11",
     "react-icons": "^4.10.1",
     "superjson": "1.12.2",
     "typedoc": "^0.25.1",
