--- a/.gitignore
+++ b/.gitignore
@@ -42,7 +42,7 @@ yarn-error.log*
 *.tsbuildinfo
 
 # content
-/public/img/portfolio/**
+/public/img/portfolio/photos/*
 /public/img/team/*
 /public/img/references/*
 /public/img/*.png
