Delete photos folder in portfolio Adding trycatch in lib Delete unsued files Correct display bug in portfolio pages Correct bug when smartphone and tablet click on picture in team page

--- a/.gitignore
+++ b/.gitignore
@@ -42,7 +42,7 @@ yarn-error.log*
 *.tsbuildinfo
 
 # content
-/public/img/portfolio/photos/*
+/public/img/portfolio/*
 /public/img/team/*
 /public/img/references/*
 /public/img/*.png
