--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,8 @@ yarn-error.log*
 /public/img/portfolio/*
 /public/img/team/*
 /public/img/references/*
+/public/img/blog/*
+/public/img/*.jpg
 /public/img/*.png
 /public/img/*.svg
 public/video/**
