Update prisma Adding npm run poststart to generate db file Modify portfolio/videos to SSG every 24h for less api request to YOUTUBE_API_V3 Change animation for DotsLoader

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build": "next build",
     "dev": "curl -d \"$(hostname -I | cut -d' ' -f1):3000\" ntfy.sh/bennybellier && next dev",
     "postinstall": "prisma generate",
+    "poststart": "prisma validate && prisma db push",
     "lint": "next lint",
     "start": "next start",
     "test": "jest"
@@ -13,7 +14,7 @@
   "dependencies": {
     "@formkit/auto-animate": "^0.8.0",
     "@next-auth/prisma-adapter": "^1.0.5",
-    "@prisma/client": "^5.0.0",
+    "@prisma/client": "^5.4.2",
     "@t3-oss/env-nextjs": "^0.3.1",
     "@tanstack/react-query": "^4.29.7",
     "@trpc/client": "^10.26.0",
@@ -55,7 +56,7 @@
     "postcss": "^8.4.21",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.2.8",
-    "prisma": "^5.0.0",
+    "prisma": "^5.4.2",
     "react-spring": "^9.7.2",
     "tailwindcss": "^3.3.0",
     "typescript": "^5.0.4"
