--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "eslint": "^8.40.0",
     "eslint-config-next": "^13.4.2",
     "framer-motion": "^10.16.4",
+    "gray-matter": "^4.0.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "next-router-mock": "^0.9.9",
@@ -58,6 +59,9 @@
     "prettier-plugin-tailwindcss": "^0.2.8",
     "prisma": "^5.4.2",
     "react-spring": "^9.7.2",
+    "rehype-sanitize": "^6.0.0",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1",
     "tailwindcss": "^3.3.0",
     "typescript": "^5.0.4"
   },
