--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "poststart": "prisma validate && prisma db push",
     "lint": "next lint",
     "start": "next start",
-    "test": "jest"
+    "test": "jest",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@formkit/auto-animate": "^0.8.0",
@@ -36,6 +38,15 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@storybook/addon-essentials": "^7.4.6",
+    "@storybook/addon-interactions": "^7.4.6",
+    "@storybook/addon-links": "^7.4.6",
+    "@storybook/addon-onboarding": "^1.0.8",
+    "@storybook/addon-styling-webpack": "^0.0.5",
+    "@storybook/blocks": "^7.4.6",
+    "@storybook/nextjs": "^7.4.6",
+    "@storybook/react": "^7.4.6",
+    "@storybook/testing-library": "^0.2.2",
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
     "@types/eslint": "^8.37.0",
@@ -49,6 +60,7 @@
     "autoprefixer": "^10.4.14",
     "eslint": "^8.40.0",
     "eslint-config-next": "^13.4.2",
+    "eslint-plugin-storybook": "^0.6.15",
     "framer-motion": "^10.16.4",
     "gray-matter": "^4.0.3",
     "jest": "^29.7.0",
@@ -62,6 +74,7 @@
     "rehype-sanitize": "^6.0.0",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
+    "storybook": "^7.4.6",
     "tailwindcss": "^3.3.0",
     "typescript": "^5.0.4"
   },
