--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@storybook/addon-essentials": "^7.4.6",
     "@storybook/addon-interactions": "^7.4.6",
     "@storybook/addon-links": "^7.4.6",
+    "@storybook/addon-mdx-gfm": "^7.4.6",
     "@storybook/addon-onboarding": "^1.0.8",
     "@storybook/addon-styling-webpack": "^0.0.5",
     "@storybook/blocks": "^7.4.6",
@@ -58,6 +59,7 @@
     "@typescript-eslint/eslint-plugin": "6.0.0",
     "@typescript-eslint/parser": "6.0.0",
     "autoprefixer": "^10.4.14",
+    "css-loader": "^6.8.1",
     "eslint": "^8.40.0",
     "eslint-config-next": "^13.4.2",
     "eslint-plugin-storybook": "^0.6.15",
@@ -67,6 +69,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "next-router-mock": "^0.9.9",
     "postcss": "^8.4.21",
+    "postcss-loader": "^7.3.3",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.2.8",
     "prisma": "^5.4.2",
@@ -75,6 +78,7 @@
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
     "storybook": "^7.4.6",
+    "style-loader": "^3.3.3",
     "tailwindcss": "^3.3.0",
     "typescript": "^5.0.4"
   },
