--- a/package.json
+++ b/package.json
@@ -9,45 +9,43 @@
     "poststart": "prisma validate && prisma db push",
     "lint": "next lint",
     "start": "next start",
-    "test": "jest",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "test": "jest"
   },
   "dependencies": {
     "@formkit/auto-animate": "^0.8.0",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^5.4.2",
+    "@radix-ui/react-slot": "^1.0.2",
     "@t3-oss/env-nextjs": "^0.3.1",
     "@tanstack/react-query": "^4.29.7",
     "@trpc/client": "^10.26.0",
     "@trpc/next": "^10.26.0",
     "@trpc/react-query": "^10.26.0",
     "@trpc/server": "^10.26.0",
+    "class-variance-authority": "^0.7.0",
+    "classnames": "^2.3.2",
+    "clsx": "^2.0.0",
     "embla-carousel-react": "^8.0.0-rc12",
     "fs": "^0.0.1-security",
     "image-size": "^1.0.2",
+    "lucide-react": "^0.292.0",
     "next": "^13.4.2",
     "next-auth": "^4.22.1",
+    "next-theme": "^0.1.5",
+    "next-themes": "^0.2.1",
     "path": "^0.12.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-error-boundary": "^4.0.11",
     "react-icons": "^4.10.1",
     "superjson": "1.12.2",
+    "swr": "^2.2.4",
+    "tailwind-merge": "^2.0.0",
+    "tailwindcss-animate": "^1.0.7",
     "typedoc": "^0.25.1",
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@storybook/addon-essentials": "^7.4.6",
-    "@storybook/addon-interactions": "^7.4.6",
-    "@storybook/addon-links": "^7.4.6",
-    "@storybook/addon-mdx-gfm": "^7.4.6",
-    "@storybook/addon-onboarding": "^1.0.8",
-    "@storybook/addon-styling-webpack": "^0.0.5",
-    "@storybook/blocks": "^7.4.6",
-    "@storybook/nextjs": "^7.4.6",
-    "@storybook/react": "^7.4.6",
-    "@storybook/testing-library": "^0.2.2",
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
     "@types/eslint": "^8.37.0",
@@ -62,7 +60,6 @@
     "css-loader": "^6.8.1",
     "eslint": "^8.40.0",
     "eslint-config-next": "^13.4.2",
-    "eslint-plugin-storybook": "^0.6.15",
     "framer-motion": "^10.16.4",
     "gray-matter": "^4.0.3",
     "jest": "^29.7.0",
@@ -77,7 +74,6 @@
     "rehype-sanitize": "^6.0.0",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
-    "storybook": "^7.4.6",
     "style-loader": "^3.3.3",
     "tailwindcss": "^3.3.0",
     "typescript": "^5.0.4"
