--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test",
+  "name": "templeteam",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -32,7 +32,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.292.0",
-    "next": "^14.0.0",
+    "next": "^14.0.3",
     "next-auth": "^4.24.4",
     "next-safe-action": "^5.0.3",
     "next-themes": "^0.2.1",
