--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
     "db:migrate": "prisma migrate dev",
+    "db:seed": "prisma db seed",
+    "db:create-only": "prisma migrate dev --create-only",
     "postinstall": "prisma generate",
     "lint": "next lint",
     "build": "next build",
@@ -38,16 +40,20 @@
     "@trpc/server": "^10.37.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "embla-carousel-react": "^8.0.0-rc21",
     "lucide-react": "^0.292.0",
-    "next": "^14.0.4",
+    "next": "^14.1.0",
     "next-auth": "^4.24.4",
     "next-safe-action": "^5.0.3",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.49.3",
+    "sonner": "^1.3.1",
     "superjson": "^1.13.1",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
+    "usehooks-ts": "^2.10.0",
     "uuid": "^9.0.1",
     "zod": "^3.22.4"
   },
