--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "cypress": "^13.5.1",
     "eslint": "^8.47.0",
     "eslint-config-next": "^14.0.0",
+    "framer-motion": "^11.0.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.27",
