--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.49.3",
+    "sharp": "^0.33.2",
     "sonner": "^1.3.1",
     "superjson": "^1.13.1",
     "tailwind-merge": "^2.0.0",
