Update and rename deployment.yml to CD.yml

--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -20,6 +20,7 @@ jobs:
           script: |
             cd ${{ secrets.PROD_DIR }}
             git checkout ${{ secrets.MAIN_BRANCH }}
+            ${{ secrets.VIRTUAL_ENV_ACCESS }}
             git pull
             npm install
             npm run build
