--- a/.gitignore
+++ b/.gitignore
@@ -55,6 +55,6 @@ src/stories/assets/*
 
 tailwind.config (1).*
 conf tailwind.js
-.gitignore
 conf tailwind.ts
-vscode-profile-2024-01-29-22-38-45.cpuprofile
+
+server.js
