Removing Dockerfile Adding zod-prisma to generate zod schema from prisma table adding middleware.ts to secure app at root create Login function for custom NextAuth form Adding credentials provider in auth.tsx Create error.tsx to handle error in home page Correct bug with VideoWithLoader Delete unnecessary log in navigation.tsx

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,10 @@
 {
   "WillLuke.nextjs.addTypesOnSave": true,
-  "WillLuke.nextjs.hasPrompted": true
+  "WillLuke.nextjs.hasPrompted": true,
+  "testing.openTesting": "neverOpen",
+  "jest.outputConfig": {
+    "revealOn": "run",
+    "revealWithFocus": "none",
+    "clearOnRun": "none"
+  }
 }
