--- a/package.json
+++ b/package.json
@@ -40,11 +40,12 @@
     "@trpc/next": "^10.37.1",
     "@trpc/react-query": "^10.37.1",
     "@trpc/server": "^10.37.1",
+    "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "embla-carousel-react": "^8.0.0-rc21",
     "lucide-react": "^0.292.0",
-    "next": "^14.1.0",
+    "next": "^14.1.3",
     "next-auth": "^4.24.4",
     "next-safe-action": "^5.0.3",
     "next-themes": "^0.2.1",
@@ -65,6 +66,7 @@
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.1.0",
     "@testing-library/user-event": "^14.5.1",
+    "@types/bcrypt": "^5.0.2",
     "@types/eslint": "^8.44.2",
     "@types/jest": "^29.5.8",
     "@types/node": "^18.18.9",
@@ -87,7 +89,8 @@
     "start-server-and-test": "^1.11.0",
     "tailwindcss": "^3.3.3",
     "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "zod-prisma": "^0.5.4"
   },
   "ct3aMetadata": {
     "initVersion": "7.23.2"
