--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cypress:open": "cypress open"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.1.1",
     "@radix-ui/react-accordion": "^1.1.2",
@@ -29,6 +30,7 @@
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
@@ -51,7 +53,7 @@
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.49.3",
+    "react-hook-form": "^7.51.0",
     "sharp": "^0.33.2",
     "sonner": "^1.3.1",
     "superjson": "^1.13.1",
@@ -85,12 +87,11 @@
     "postcss": "^8.4.27",
     "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.5.1",
-    "prisma": "^5.1.1",
+    "prisma": "^5.10.2",
     "start-server-and-test": "^1.11.0",
     "tailwindcss": "^3.3.3",
     "ts-node": "^10.9.1",
-    "typescript": "^5.2.2",
-    "zod-prisma": "^0.5.4"
+    "typescript": "^5.2.2"
   },
   "ct3aMetadata": {
     "initVersion": "7.23.2"
