--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,68 +1,68 @@
-# name: Continuous integration
+name: Continuous integration
 
-# on:
-#   push:
-#     branches:
-#       - main
-#   pull_request:
-#     branches:
-#       - main
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
-# jobs:
-#   frontend-test:
-#     runs-on: ubuntu-latest
-#     env:
-#       DATABASE_URL: ${{secrets.DATABASE_URL}}
-#       YOUTUBE_API_KEY: ${{secrets.YOUTUBE_API_KEY}}
-#       YOUTUBE_CHANNEL_ID: ${{secrets.YOUTUBE_CHANNEL_ID}}
-#       NEXTAUTH_SECRET: ${{secrets.NEXTAUTH_SECRET}}
-#       NEXTAUTH_URL: ${{secrets.NEXTAUTH_URL}}
-#       DISCORD_CLIENT_ID: ${{secrets.DISCORD_CLIENT_ID}}
-#       DISCORD_CLIENT_SECRET: ${{secrets.DISCORD_CLIENT_SECRET}}
-#     steps:
-#       - uses: actions/checkout@v3
+jobs:
+  frontend-test:
+    runs-on: ubuntu-latest
+    env:
+      DATABASE_URL: ${{secrets.DATABASE_URL}}
+      YOUTUBE_API_KEY: ${{secrets.YOUTUBE_API_KEY}}
+      YOUTUBE_CHANNEL_ID: ${{secrets.YOUTUBE_CHANNEL_ID}}
+      NEXTAUTH_SECRET: ${{secrets.NEXTAUTH_SECRET}}
+      NEXTAUTH_URL: ${{secrets.NEXTAUTH_URL}}
+      DISCORD_CLIENT_ID: ${{secrets.DISCORD_CLIENT_ID}}
+      DISCORD_CLIENT_SECRET: ${{secrets.DISCORD_CLIENT_SECRET}}
+    steps:
+      - uses: actions/checkout@v3
 
-#       - name: Use Node.js 17
-#         uses: actions/setup-node@v3
-#         with:
-#           node-version: 17
+      - name: Use Node.js 17
+        uses: actions/setup-node@v3
+        with:
+          node-version: 17
 
-#       - name: Install dependencies
-#         run: npm install
+      - name: Install dependencies
+        run: npm install
 
-#       - name: Build
-#         run: npm run build --if-present
+      - name: Build
+        run: npm run build --if-present
 
-#       - name: Lint
-#         run: npm run lint
+      - name: Lint
+        run: npm run lint
 
-#       - name: Test
-#         run: npm test
+      - name: Test
+        run: npm test
 
-#   backend-test:
-#     runs-on: ubuntu-latest
-#     steps:
-#       - uses: actions/checkout@v3
+  backend-test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
 
-#       - name: Use Node.js 17
-#         uses: actions/setup-node@v3
-#         with:
-#           node-version: 17
+      - name: Use Node.js 17
+        uses: actions/setup-node@v3
+        with:
+          node-version: 17
 
-#       - name: Install dependencies
-#         run: npm install
+      - name: Install dependencies
+        run: npm install
 
-#   # integrations-test:
-#   #   runs-on: ubuntu-latest
-#   #   needs: [frontend-test, backend-test]
+  # integrations-test:
+  #   runs-on: ubuntu-latest
+  #   needs: [frontend-test, backend-test]
 
-#   #   steps:
-#   #     - uses: actions/checkout@v3
+  #   steps:
+  #     - uses: actions/checkout@v3
 
-#   #     - name: Use Node.js 17
-#   #       uses: actions/setup-node@v3
-#   #       with:
-#   #         node-version: 17
+  #     - name: Use Node.js 17
+  #       uses: actions/setup-node@v3
+  #       with:
+  #         node-version: 17
 
-#   #     - name: Install dependencies
-#   #       run: npm install
+  #     - name: Install dependencies
+  #       run: npm install
