--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ name: Continuous integration
 on:
   push:
     branches:
-      - main
+      - develop
   pull_request:
     branches:
       - main
@@ -17,15 +17,13 @@ jobs:
       YOUTUBE_CHANNEL_ID: ${{secrets.YOUTUBE_CHANNEL_ID}}
       NEXTAUTH_SECRET: ${{secrets.NEXTAUTH_SECRET}}
       NEXTAUTH_URL: ${{secrets.NEXTAUTH_URL}}
-      DISCORD_CLIENT_ID: ${{secrets.DISCORD_CLIENT_ID}}
-      DISCORD_CLIENT_SECRET: ${{secrets.DISCORD_CLIENT_SECRET}}
     steps:
       - uses: actions/checkout@v3
 
-      - name: Use Node.js 17
+      - name: Use Node.js 20
         uses: actions/setup-node@v3
         with:
-          node-version: 17
+          node-version: 20
 
       - name: Install dependencies
         run: npm install
@@ -44,25 +42,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Use Node.js 17
+      - name: Use Node.js 20
         uses: actions/setup-node@v3
         with:
-          node-version: 17
+          node-version: 20
 
       - name: Install dependencies
         run: npm install
-
-  # integrations-test:
-  #   runs-on: ubuntu-latest
-  #   needs: [frontend-test, backend-test]
-
-  #   steps:
-  #     - uses: actions/checkout@v3
-
-  #     - name: Use Node.js 17
-  #       uses: actions/setup-node@v3
-  #       with:
-  #         node-version: 17
-
-  #     - name: Install dependencies
-  #       run: npm install
