--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "new_templeteam",
+  "name": "templeteam",
   "version": "0.1.0",
   "private": true,
   "type": "module",
@@ -12,10 +12,13 @@
     "lint": "next lint",
     "start": "next start"
   },
+  "prisma": {
+    "seed": "node --loader ts-node/esm prisma/seed.ts"
+  },
   "dependencies": {
     "@auth/prisma-adapter": "^1.4.0",
     "@hookform/resolvers": "^3.3.4",
-    "@prisma/client": "^5.10.2",
+    "@prisma/client": "^5.12.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -23,6 +26,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-navigation-menu": "^1.1.4",
+    "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
@@ -37,7 +41,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "embla-carousel-react": "^8.0.0",
-    "framer-motion": "^11.0.20",
+    "framer-motion": "^11.0.24",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.363.0",
     "next": "^14.1.3",
@@ -59,7 +63,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/eslint": "^8.56.2",
     "@types/jsonwebtoken": "^9.0.6",
-    "@types/node": "^20.11.20",
+    "@types/node": "^20.12.2",
     "@types/react": "^18.2.57",
     "@types/react-dom": "^18.2.19",
     "@types/uuid": "^9.0.8",
@@ -70,9 +74,10 @@
     "postcss": "^8.4.34",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
-    "prisma": "^5.10.2",
+    "prisma": "^5.12.0",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.4.2"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.3"
   },
   "ct3aMetadata": {
     "initVersion": "7.30.0"
