--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,9 @@
 name: Continuous integration
 
 on:
-  push:
-    branches:
-      - develop
+  # push:
+    # branches:
+      # - develop
   pull_request:
     branches:
       - main
