--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.4.0",
+    "@epegzz/winston-dev-console": "^1.3.4",
     "@hookform/resolvers": "^3.3.4",
-    "@prisma/client": "^5.12.0",
+    "@prisma/client": "^5.12.1",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -42,6 +43,7 @@
     "clsx": "^2.1.0",
     "embla-carousel-react": "^8.0.0",
     "framer-motion": "^11.0.24",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.363.0",
     "next": "^14.1.3",
@@ -57,6 +59,7 @@
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.0.2",
     "uuid": "^9.0.1",
+    "winston": "^3.13.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -75,7 +78,7 @@
     "postcss": "^8.4.34",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
-    "prisma": "^5.12.0",
+    "prisma": "^5.12.1",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.3"
