--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "db:studio": "prisma studio",
     "postinstall": "prisma generate",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "email:dev": "email dev --port 3600"
   },
   "prisma": {
     "seed": "node --loader ts-node/esm prisma/seed.ts"
@@ -32,6 +33,7 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
+    "@react-email/components": "0.0.16",
     "@t3-oss/env-nextjs": "^0.9.2",
     "@tanstack/react-query": "^5.25.0",
     "@trpc/client": "next",
@@ -46,12 +48,15 @@
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.363.0",
-    "next": "^14.1.3",
+    "next": "^14.2.2",
     "next-auth": "^4.24.6",
     "next-themes": "^0.3.0",
+    "nodemailer": "^6.9.13",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-email": "2.1.1",
     "react-hook-form": "^7.51.1",
+    "react-hot-toast": "^2.4.1",
     "server-only": "^0.0.1",
     "sharp": "^0.33.3",
     "superjson": "^2.2.1",
@@ -68,6 +73,7 @@
     "@types/eslint": "^8.56.2",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.12.2",
+    "@types/nodemailer": "^6.4.14",
     "@types/react": "^18.2.57",
     "@types/react-dom": "^18.2.19",
     "@types/uuid": "^9.0.8",
@@ -79,7 +85,7 @@
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "prisma": "^5.12.1",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.3"
   },
