--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@auth/prisma-adapter": "^1.4.0",
     "@epegzz/winston-dev-console": "^1.3.4",
     "@hookform/resolvers": "^3.3.4",
-    "@prisma/client": "^5.12.1",
+    "@prisma/client": "^5.14.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -40,6 +40,7 @@
     "@trpc/next": "next",
     "@trpc/react-query": "next",
     "@trpc/server": "next",
+    "@types/lodash": "^4.17.4",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -47,19 +48,21 @@
     "framer-motion": "^11.0.24",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.363.0",
-    "next": "^14.2.2",
+    "next": "^14.2.3",
     "next-auth": "^4.24.6",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.13",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-email": "2.1.1",
+    "react-email": "^2.1.4",
     "react-hook-form": "^7.51.1",
     "react-hot-toast": "^2.4.1",
     "server-only": "^0.0.1",
     "sharp": "^0.33.3",
     "superjson": "^2.2.1",
+    "swr": "^2.2.5",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.0.2",
@@ -84,7 +87,7 @@
     "postcss": "^8.4.34",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
-    "prisma": "^5.12.1",
+    "prisma": "^5.14.0",
     "tailwindcss": "^3.4.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.3"
