Adding references pagination size in env file Correcting Blog page Finished references page

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -40,7 +40,7 @@
     "src/env.mjs",
     "middleware.ts",
     "src/components/references/ReferencesProvider.ts",
-    "prisma/*.ts",
+    "prisma/*.ts", "app/blog/loading.tsx",
   ],
   "exclude": ["node_modules"]
 }
