--- a/package.json
+++ b/package.json
@@ -22,16 +22,22 @@
     "@hookform/resolvers": "^3.3.4",
     "@prisma/client": "^5.14.0",
     "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
+    "@radix-ui/react-checkbox": "^1.1.1",
+    "@radix-ui/react-collapsible": "^1.1.0",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-navigation-menu": "^1.1.4",
+    "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-progress": "^1.0.3",
+    "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-toast": "^1.1.5",
     "@react-email/components": "0.0.16",
     "@t3-oss/env-nextjs": "^0.9.2",
@@ -44,21 +50,26 @@
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "cmdk": "^1.0.0",
+    "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.0.0",
     "framer-motion": "^11.0.24",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.363.0",
-    "next": "^14.2.4",
+    "next": "^14.2.5",
     "next-auth": "^4.24.6",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.13",
     "react": "18.2.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "18.2.0",
     "react-email": "^2.1.4",
     "react-hook-form": "^7.51.1",
     "react-hot-toast": "^2.4.1",
+    "react-phone-number-input": "^3.4.4",
+    "react-signature-canvas": "^1.0.6",
     "server-only": "^0.0.1",
     "sharp": "^0.33.3",
     "superjson": "^2.2.1",
@@ -68,7 +79,8 @@
     "usehooks-ts": "^3.0.2",
     "uuid": "^9.0.1",
     "winston": "^3.13.0",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
