--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@prisma/client": "^5.14.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
-    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-collapsible": "^1.1.0",
+    "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
@@ -31,9 +33,13 @@
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
-    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-tooltip": "^1.1.2",
     "@react-email/components": "0.0.16",
+    "@react-three/drei": "^9.108.3",
+    "@react-three/fiber": "^8.16.8",
     "@t3-oss/env-nextjs": "^0.9.2",
     "@tanstack/react-query": "^5.25.0",
     "@trpc/client": "next",
@@ -41,6 +47,7 @@
     "@trpc/react-query": "next",
     "@trpc/server": "next",
     "@types/lodash": "^4.17.4",
+    "@types/three": "^0.166.0",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -54,17 +61,20 @@
     "next-auth": "^4.24.6",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.13",
+    "pdf-lib": "^1.17.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-email": "^2.1.4",
     "react-hook-form": "^7.51.1",
     "react-hot-toast": "^2.4.1",
+    "react-resizable-panels": "^2.0.21",
     "server-only": "^0.0.1",
     "sharp": "^0.33.3",
     "superjson": "^2.2.1",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.166.1",
     "usehooks-ts": "^3.0.2",
     "uuid": "^9.0.1",
     "winston": "^3.13.0",
