--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
+    "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-collapsible": "^1.1.0",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -39,6 +40,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-toggle": "^1.1.0",
     "@react-email/components": "0.0.16",
     "@t3-oss/env-nextjs": "^0.9.2",
     "@tanstack/react-query": "^5.25.0",
@@ -46,26 +48,32 @@
     "@trpc/next": "next",
     "@trpc/react-query": "next",
     "@trpc/server": "next",
+    "@types/formidable": "^3.4.5",
     "@types/lodash": "^4.17.4",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
+    "countries-list": "^3.1.1",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.0.0",
     "framer-motion": "^11.0.24",
     "fs": "^0.0.1-security",
+    "i18n-iso-countries": "^7.11.3",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
-    "lucide-react": "^0.363.0",
+    "lucide-react": "^0.436.0",
+    "mime": "^4.0.4",
     "next": "^14.2.5",
     "next-auth": "^4.24.6",
+    "next-rate-limit": "^0.0.3",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.13",
     "react": "18.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "18.2.0",
-    "react-email": "^2.1.4",
+    "react-dropzone": "^14.2.3",
+    "react-email": "^1.10.1",
     "react-hook-form": "^7.51.1",
     "react-hot-toast": "^2.4.1",
     "react-phone-number-input": "^3.4.4",
@@ -78,7 +86,8 @@
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.0.2",
     "uuid": "^9.0.1",
-    "winston": "^3.13.0",
+    "winston": "^3.14.2",
+    "winston-daily-rotate-file": "^5.0.0",
     "zod": "^3.22.4",
     "zustand": "^4.5.4"
   },
@@ -87,10 +96,12 @@
     "@types/bcrypt": "^5.0.2",
     "@types/eslint": "^8.56.2",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/mime": "^3.0.4",
     "@types/node": "^20.12.2",
     "@types/nodemailer": "^6.4.14",
     "@types/react": "^18.2.57",
     "@types/react-dom": "^18.2.19",
+    "@types/react-signature-canvas": "^1.0.5",
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
