--- a/.gitignore
+++ b/.gitignore
@@ -44,14 +44,10 @@ yarn-error.log*
 #vscode
 .vscode
 
+# react email
+.react-email
+
 # content
-/public/img/portfolio/*
-/public/img/team/*
-/public/img/references/*
-/public/img/blog/*
-/public/img/*.jpg
-/public/img/*.png
-/public/img/*.svg
-public/video/**
-/src/data/blog_posts/*
+public
+fonts
 .idx/dev.nix
