--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@auth/prisma-adapter": "^1.4.0",
     "@epegzz/winston-dev-console": "^1.3.4",
     "@hookform/resolvers": "^3.3.4",
+    "@pdf-lib/fontkit": "^1.1.1",
     "@prisma/client": "^5.14.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
@@ -64,7 +65,7 @@
     "pdf-lib": "^1.17.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-email": "^2.1.4",
+    "react-email": "^1.10.1",
     "react-hook-form": "^7.51.1",
     "react-hot-toast": "^2.4.1",
     "react-resizable-panels": "^2.0.21",
