--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "postinstall": "prisma generate",
     "lint": "next lint",
     "start": "next start",
-    "email:dev": "email dev --port 3600"
+    "email:dev": "email dev --port 3600",
+    "format:check": "prettier --check \"**/*.{ts,tsx,md}\"",
+    "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "prisma": {
     "seed": "node --loader ts-node/esm prisma/seed.ts"
