--- a/package.json
+++ b/package.json
@@ -33,10 +33,11 @@
     "@radix-ui/react-collapsible": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.3",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-hover-card": "^1.1.4",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-navigation-menu": "^1.1.4",
-    "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-popover": "^1.1.4",
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-select": "^2.0.0",
@@ -72,7 +73,7 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.436.0",
     "mime": "^4.0.4",
-    "next": "^15.1.0",
+    "next": "^15.1.1",
     "next-auth": "^4.24.7",
     "next-rate-limit": "^0.0.3",
     "next-themes": "^0.3.0",
