--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@epegzz/winston-dev-console": "^1.3.4",
     "@hookform/resolvers": "^3.3.4",
     "@prisma/client": "^6.0.1",
+    "@radix-ui/react-accessible-icon": "^1.1.1",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
