--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "db:studio": "prisma studio",
     "db:migrate": "prisma migrate dev",
     "db:seed": "tsx prisma/seed.ts",
+    "db:migration": "tsx prisma/migrate.ts",
     "postinstall": "prisma generate",
     "lint": "next lint",
     "start": "next start",
@@ -18,13 +19,14 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "prisma": {
-    "seed": "tsx prisma/seed.ts"
+    "seed": "tsx prisma/seed.ts",
+    "migration": "tsx prisma/migrate.ts"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.4",
     "@epegzz/winston-dev-console": "^1.3.4",
     "@hookform/resolvers": "^3.3.4",
-    "@prisma/client": "^6.0.1",
+    "@prisma/client": "^6.1.0",
     "@radix-ui/react-accessible-icon": "^1.1.1",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.1.1",
@@ -122,7 +124,7 @@
     "postcss": "^8.4.34",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
-    "prisma": "^6.0.1",
+    "prisma": "^6.1.0",
     "tailwindcss": "^3.4.3",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.2",
