--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@react-email/components": "0.0.16",
     "@t3-oss/env-nextjs": "^0.9.2",
     "@tanstack/react-query": "^5.25.0",
+    "@tanstack/react-table": "^8.20.6",
     "@trpc/client": "next",
     "@trpc/next": "next",
     "@trpc/react-query": "next",
