--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "winston": "^3.14.2",
     "winston-daily-rotate-file": "^5.0.0",
     "zod": "^3.22.4",
+    "zod-form-data": "^2.0.5",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
