--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,9 +27,9 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"],
-      "app/*": ["./app/*"],
-      "public/*": ["./public/*"],
-      "emails/*": ["./emails"]
+      "#app/*": ["./app/*"],
+      "#public/*": ["./public/*"],
+      "#emails/*": ["./emails"]
     },
     "typeRoots": ["types"]
   },
