--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.5",
     "@react-email/components": "0.0.16",
+    "@stepperize/react": "^4.1.3",
     "@t3-oss/env-nextjs": "^0.9.2",
     "@tanstack/react-query": "^5.25.0",
     "@tanstack/react-table": "^8.20.6",
