--- a/package.json
+++ b/package.json
@@ -106,7 +106,8 @@
     "winston-daily-rotate-file": "^5.0.0",
     "zod": "^3.22.4",
     "zod-form-data": "^2.0.5",
-    "zustand": "^4.5.4"
+    "zustand": "^4.5.4",
+    "zustymiddleware": "^1.2.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
