--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "@radix-ui/react-toast": "^1.2.5",
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.7",
-    "@react-email/components": "0.0.16",
+    "@react-email/components": "^0.0.32",
     "@stepperize/react": "^4.2.0",
     "@t3-oss/env-nextjs": "^0.9.2",
     "@tanstack/react-query": "^5.65.1",
@@ -88,7 +88,6 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.3.5",
-    "react-email": "^3.0.6",
     "react-error-boundary": "^4.1.2",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.1",
@@ -130,6 +129,7 @@
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "prisma": "^6.2.1",
+    "react-email": "^3.0.6",
     "tailwindcss": "^3.4.17",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.2",
