Feat: add index for better-auth table Feat: Add script to create admin user Feat: disable user account creation Feat: Center Sign In form

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -49,7 +49,8 @@
     "src/**/*.ts",
     "src/components/**/*.tsx",
     "src/components/**/*.ts",
-    ".vscode/(public)/page.tsx"
+    ".vscode/(public)/page.tsx",
+    "scripts/**/*.ts"
   ],
   "exclude": ["node_modules"]
 }
